agrega contribuciones y autores

--- a/pages/asistentes/0-asistentes.html
+++ b/pages/asistentes/0-asistentes.html
@@ -3,7 +3,7 @@ layout: page
 title: Asistentes Computacionales
 ---
 
-<h2 style="color: #134383;">Asistentes computacionales</h2>
+<h2>Asistentes computacionales</h2>
 
 <div class="card-container">
     <div class="card">
