--- a/pages/docentes/0-docentes.html
+++ b/pages/docentes/0-docentes.html
@@ -3,7 +3,7 @@ layout: page
 title: Docentes
 ---
 
-<h2 style="color: #134383;">Nuestros Docentes</h2>
+<h2>Nuestros Docentes</h2>
 
 <div class="card-container">
     <div class="card">
