--- a/pages/estadistica/0-estadistica.html
+++ b/pages/estadistica/0-estadistica.html
@@ -3,7 +3,7 @@ layout: page
 title: Estadística
 ---
 
-<h2 style="color: #134383;">Asignaturas de Estadística</h2>
+<h2>Asignaturas de Estadística</h2>
 
 <div class="card-container">
     <div class="card">
