--- a/pages/fisica/0-fisica.html
+++ b/pages/fisica/0-fisica.html
@@ -3,7 +3,7 @@ layout: page
 title: Física
 ---
 
-<h2 style="color: #134383;">Asignaturas de Física</h2>
+<h2>Asignaturas de Física</h2>
 
 <div class="card-container">
     <div class="card">
