--- a/pages/matematica/0-matematica.html
+++ b/pages/matematica/0-matematica.html
@@ -3,7 +3,7 @@ layout: page
 title: Matemática
 ---
 
-<h2 style="color: #134383;">Asignaturas de Matemática</h2>
+<h2>Asignaturas de Matemática</h2>
 
 <div class="card-container">
     <div class="card">
