--- a/pages/nivelacion/0-nivelacion.html
+++ b/pages/nivelacion/0-nivelacion.html
@@ -3,7 +3,7 @@ layout: page
 title: Curso de Nivelación
 ---
 
-<h2 style="color: #134383;">Curso de Nivelación</h2>
+<h2>Curso de Nivelación</h2>
 
 <div class="card-container">
     <div class="card">
