--- a/pages/asistentes/NotebooksR.html
+++ b/pages/asistentes/NotebooksR.html
@@ -3,18 +3,46 @@ layout: page
 title: Notebooks Educativos de R
 ---
 
-<div class="container">
-    <h2 style="color: #134383;">Notebooks Educativos de R</h2>
-</div>
+<h2>Notebooks Educativos de R</h2>
 
-<div class="card-container">
-    <div class="card">
+<div class="container-material">
+    <div class="item">
+        <p>Introducción a R: Funcionalidades Básicas y Gráficos</p>
         <a
-            href="https://colab.research.google.com/github/ECFM-PUCE/R-Notebooks-Educativos/blob/main/00-Introduccion_a_R.ipynb">
-            <div class="card-body">
-                <h5 class="card-title">Introducción a R: Funcionalidades Básicas y Gráficos</h5>
-                <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab" />
-            </div>
+            href="https://colab.research.google.com/github/ECFM-PUCE/R-Notebooks-Educativos/blob/main/Intro2R.ipynb">
+            <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab" />
+        </a>
+    </div>
+    <div class="item">
+        <p>Funciones de estadística nativas y creación de funciones propias</p>
+        <a
+            href="https://colab.research.google.com/github/ECFM-PUCE/R-Notebooks-Educativos/blob/main/FunBasic.ipynb">
+            <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab" />
         </a>
     </div>
 </div>
+
+<p style="margin-top: 20px; font-size: 16px;">
+    Si detectas algún error en este material, por favor repórtalo
+    <a href="https://github.com/ECFM-PUCE/R-Notebooks-Educativos/issues">
+        aquí
+    </a>.
+</p>
+
+<div id="contributors">
+    <h5 style="color: #134383;">Material elaborado por:</h5>
+    <ul id="contributors-list"></ul>
+</div>
+
+<div id="recent-commits">
+    <h5 style="color: #134383;">Últimos cambios implementados:</h5>
+    <ul id="commits-list"></ul>
+</div>
+
+<script>
+    // Repositorio de GitHub (usuario/nombre-del-repositorio)
+    const repoOwner = "ECFM-PUCE";
+    const repoName = "R-Notebooks-Educativos";
+</script>
+
+{% include recent-commits.html %}
