--- a/pages/matematica/AlgebraLineal.html
+++ b/pages/matematica/AlgebraLineal.html
@@ -3,45 +3,60 @@ layout: page
 title: Álgebra Lineal
 ---
 
-<div class="container">
-    <h2 style="color: #134383;">05-N0048 - Álgebra Lineal</h2>
+
+<h2>Álgebra Lineal (05-N0048)</h2>
+
+<div class="container-material" id="material-container">
+    <div class="item" data-link="01Resumen">
+        Resúmenes de clase
+    </div>
+    <div class="item" data-link="02ResumenPython">
+        Resúmenes de Python
+    </div>
+    <div class="item" data-link="03Extra">
+        Extras
+    </div>
+    <div class="item" data-link="04Ejercicios">
+        Hojas de Ejercicios
+    </div>
+    <div class="item" data-link="05Proyectos-Retos">
+        Proyectos y Retos
+    </div>
+    <div class="item" data-link="06Examenes">
+        Exámenes
+    </div>
+    <div class="item" data-link="07Act-ClaseInvertida">
+        Clase Invertida
+    </div>
+    <div class="item" data-link="07Act-ControlLectura">
+        Controles de lectura
+    </div>
+    <div class="item" data-link="07Act-Exposiciones">
+        Exposiciones
+    </div>
 </div>
 
-<div class="container-material">
-    <div class="item">
-        <i class="fas fa-file-alt icon"></i>
-        <a href="#">01Resumen</a>
-    </div>
-    <div class="item">
-        <i class="fab fa-python icon"></i>
-        <a href="#">02ResumenPython</a>
-    </div>
-    <div class="item">
-        <i class="fas fa-plus-circle icon"></i>
-        <a href="#">03Extra</a>
-    </div>
-    <div class="item">
-        <i class="fas fa-tasks icon"></i>
-        <a href="#">04Ejercicios</a>
-    </div>
-    <div class="item">
-        <i class="fas fa-project-diagram icon"></i>
-        <a href="#">05Proyectos-Retos</a>
-    </div>
-    <div class="item">
-        <i class="fas fa-clipboard-check icon"></i>
-        <a href="#">06Examenes</a>
-    </div>
-    <div class="item">
-        <i class="fas fa-chalkboard-teacher icon"></i>
-        <a href="#">07Act-ClaseInvertida</a>
-    </div>
-    <div class="item">
-        <i class="fas fa-book-reader icon"></i>
-        <a href="#">07Act-ControlLectura</a>
-    </div>
-    <div class="item">
-        <i class="fas fa-presentation icon"></i>
-        <a href="#">07Act-Exposiciones</a>
-    </div>
+<p style="margin-top: 20px; font-size: 16px;">
+    Si detectas algún error en este material, por favor repórtalo
+    <a href="https://github.com/andres-merino/Curso-Algebra-Lineal/issues">
+        aquí
+    </a>.
+</p>
+
+<div id="contributors">
+    <h5 style="color: #134383;">Material elaborado por:</h5>
+    <ul id="contributors-list"></ul>
 </div>
+
+<div id="recent-commits">
+    <h5 style="color: #134383;">Últimos cambios implementados:</h5>
+    <ul id="commits-list"></ul>
+</div>
+
+<script>
+    // Repositorio de GitHub (usuario/nombre-del-repositorio)
+    const repoOwner = "andres-merino";
+    const repoName = "Curso-Algebra-Lineal";
+</script>
+
+{% include recent-commits.html %}
