agrega páginas y docentes

--- a/pages/docentes/0-docentes.html
+++ b/pages/docentes/0-docentes.html
@@ -5,13 +5,445 @@ title: Docentes
 
 <h2>Nuestros Docentes</h2>
 
-<div class="card-container">
-    <div class="card">
-        <a href="#">
-            <div class="card-body">
-                <h5 class="card-title">En construcción</h5>
-                <img src="/assets/icons/construccion.png" alt="En construcción"  width="150">
-            </div>
-        </a>
+<div class="card-container-doc">
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Amaguaña Zumba Richard Williams</h5>
+            <img src="/assets/icons/docentes/AmaguañaZumbaRichardWilliams.png" alt="Amaguaña Zumba Richard Williams" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Amaguaña Zumba Richard Williams</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Anzieta Reyes Juan Camilo</h5>
+            <img src="/assets/icons/docentes/AnzietaReyesJuanCamilo.png" alt="Anzieta Reyes Juan Camilo" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Anzieta Reyes Juan Camilo</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Borrero González Luis José</h5>
+            <img src="/assets/icons/docentes/BorreroGonzálezLuisJosé.png" alt="Borrero González Luis José" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Borrero González Luis José</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Bravo Quezada Wilson Gabriel</h5>
+            <img src="/assets/icons/docentes/BravoQuezadaWilsonGabriel.png" alt="Bravo Quezada Wilson Gabriel" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Bravo Quezada Wilson Gabriel</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Buenaño Hermosa Edwin Vladimir</h5>
+            <img src="/assets/icons/docentes/BuenañoHermosaEdwinVladimir.png" alt="Buenaño Hermosa Edwin Vladimir" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Buenaño Hermosa Edwin Vladimir</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Buitrón Sánchez Gladys Janett</h5>
+            <img src="/assets/icons/docentes/BuitrónSánchezGladysJanett.png" alt="Buitrón Sánchez Gladys Janett" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Buitrón Sánchez Gladys Janett</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Camacho Cañar Emilse Paquita</h5>
+            <img src="/assets/icons/docentes/CamachoCañarEmilsePaquita.png" alt="Camacho Cañar Emilse Paquita" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Camacho Cañar Emilse Paquita</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Cuaical Enríquez Luis Alfredo</h5>
+            <img src="/assets/icons/docentes/CuaicalEnríquezLuisAlfredo.png" alt="Cuaical Enríquez Luis Alfredo" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Cuaical Enríquez Luis Alfredo</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Cueva Almeida Mario Edmundo</h5>
+            <img src="/assets/icons/docentes/CuevaAlmeidaMarioEdmundo.png" alt="Cueva Almeida Mario Edmundo" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Cueva Almeida Mario Edmundo</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Delgado Noboa Alicia Concepción</h5>
+            <img src="/assets/icons/docentes/DelgadoNoboaAliciaConcepción.png" alt="Delgado Noboa Alicia Concepción" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Delgado Noboa Alicia Concepción</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>González Laprea Jesús Ernesto</h5>
+            <img src="/assets/icons/docentes/GonzálezLapreaJesúsErnesto.png" alt="González Laprea Jesús Ernesto" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>González Laprea Jesús Ernesto</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Jaramillo Villagómez Jorge Enrique</h5>
+            <img src="/assets/icons/docentes/JaramilloVillagómezJorgeEnrique.png" alt="Jaramillo Villagómez Jorge Enrique" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Jaramillo Villagómez Jorge Enrique</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Merino Toapanta Andrés Esteban</h5>
+            <img src="/assets/icons/docentes/MerinoToapantaAndrésEsteban.png" alt="Merino Toapanta Andrés Esteban" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Merino Toapanta Andrés Esteban</h5>
+            <ul>
+                <li>Matemático</li>
+                <li>Mgtr. en Matemáticas Puras y Aplicadas</li>
+                <li>MSc. en Ciencia de Datos</li>
+                <li><a href="https://www.linkedin.com/in/andr%C3%A9s-merino-010a9b12b/" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="https://orcid.org/0000-0002-5404-918X" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Michelena Rosero César Gustavo</h5>
+            <img src="/assets/icons/docentes/MichelenaRoseroCésarGustavo.png" alt="Michelena Rosero César Gustavo" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Michelena Rosero César Gustavo</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Ortíz Palacios César Augusto</h5>
+            <img src="/assets/icons/docentes/OrtízPalaciosCésarAugusto.png" alt="Ortíz Palacios César Augusto" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Ortíz Palacios César Augusto</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Osorio López Juan Carlos</h5>
+            <img src="/assets/icons/docentes/OsorioLópezJuanCarlos.png" alt="Osorio López Juan Carlos" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Osorio López Juan Carlos</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Paredes Proaño Ana Maribel</h5>
+            <img src="/assets/icons/docentes/ParedesProañoAnaMaribel.png" alt="Paredes Proaño Ana Maribel" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Paredes Proaño Ana Maribel</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Rivera Gálvez Wilson Xavier</h5>
+            <img src="/assets/icons/docentes/RiveraGálvezWilsonXavier.png" alt="Rivera Gálvez Wilson Xavier" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Rivera Gálvez Wilson Xavier</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Rojas Satian Kevin Ricardo</h5>
+            <img src="/assets/icons/docentes/RojasSatianKevinRicardo.png" alt="Rojas Satian Kevin Ricardo" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Rojas Satian Kevin Ricardo</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Sarmiento Sarmiento Narcisa Marisol</h5>
+            <img src="/assets/icons/docentes/SarmientoSarmientoNarcisaMarisol.png" alt="Sarmiento Sarmiento Narcisa Marisol" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Sarmiento Sarmiento Narcisa Marisol</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Valverde Arias Pablo Javier</h5>
+            <img src="/assets/icons/docentes/ValverdeAriasPabloJavier.png" alt="Valverde Arias Pablo Javier" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Valverde Arias Pablo Javier</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Viñán Andino Alexandra Belén</h5>
+            <img src="/assets/icons/docentes/ViñánAndinoAlexandraBelén.png" alt="Viñán Andino Alexandra Belén" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Viñán Andino Alexandra Belén</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card-doc">
+        <div class="card-doc-front">
+            <h5>Vivas Cortez Miguel José</h5>
+            <img src="/assets/icons/docentes/VivasCortezMiguelJosé.png" alt="Vivas Cortez Miguel José" width="140">
+        </div>
+        <div class="card-doc-back">
+            <h5>Vivas Cortez Miguel José</h5>
+            <ul>
+                <li>Pregrado</li>
+                <li>Posgrado</li>
+                <li><a href="#" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                </a><a href="#" target="_blank">
+                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                </a></li>
+            </ul>
+        </div>
     </div>
 </div>
+
+
