--- a/pages/fisica/0-fisica.html
+++ b/pages/fisica/0-fisica.html
@@ -7,11 +7,48 @@ title: Física
 
 <div class="card-container">
     <div class="card">
-        <a href="#">
+        <a href="CBS1-FísicaTeo-Prác.html">
             <div class="card-body">
-                <h5 class="card-title">En construcción</h5>
-                <img src="/assets/icons/construccion.png" alt="En construcción"  width="150">
+                <h5 class="card-title">CBS1-Física Teo-Prác <br>  (05-N0136)</h5>
+                <img src="/assets/icons/fisica/CBS1-FísicaTeo-Prác.png" alt="CBS1-FísicaTeo-Prác.png" width="150">
             </div>
         </a>
     </div>
+
+    <div class="card">
+        <a href="FísicaGeneral.html">
+            <div class="card-body">
+                <h5 class="card-title">Física General <br>  (05-N0029)</h5>
+                <img src="/assets/icons/fisica/FísicaGeneral.png" alt="FísicaGeneral.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="FísicaI.html">
+            <div class="card-body">
+                <h5 class="card-title">Física I  <br>  (05-N0014)</h5>
+                <img src="/assets/icons/fisica/FísicaI.png" alt="FísicaI.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="FísicaIII.html">
+            <div class="card-body">
+                <h5 class="card-title">Física III <br>  (05-N0082)</h5>
+                <img src="/assets/icons/fisica/FísicaIII.png" alt="FísicaIII.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="Mecánica.html">
+            <div class="card-body">
+                <h5 class="card-title">Mecánica <br>  (05-N0061)</h5>
+                <img src="/assets/icons/fisica/Mecánica.png" alt="Mecánica.png" width="150">
+            </div>
+        </a>
+    </div>
+    
 </div>
