--- a/pages/matematica/0-matematica.html
+++ b/pages/matematica/0-matematica.html
@@ -6,20 +6,113 @@ title: Matemática
 <h2>Asignaturas de Matemática</h2>
 
 <div class="card-container">
+
     <div class="card">
-        <a href="AlgebraLineal.html">
+        <a href="Álg.LinealyGeom.Analítica.html">
             <div class="card-body">
-                <h5 class="card-title">05-N0048 - Álgebra Lineal</h5>
-                <img src="/assets/icons/AlgebraLineal.png" alt="AlgebraLineal.png"  width="150">
+                <h5 class="card-title">Álg. Lineal y Geom. Analítica <br>  (05-N0068)</h5>
+                <img src="/assets/icons/matematica/Álg.LinealyGeom.Analítica.png" alt="Álg.LinealyGeom.Analítica.png" width="150">
             </div>
         </a>
     </div>
+
     <div class="card">
-        <a href="#">
+        <a href="AlgebraLíneal.html">
             <div class="card-body">
-                <h5 class="card-title">En construcción</h5>
-                <img src="/assets/icons/construccion.png" alt="En construcción"  width="150">
+                <h5 class="card-title">Algebra Líneal <br>  (05-N0048)</h5>
+                <img src="/assets/icons/matematica/AlgebraLíneal.png" alt="AlgebraLíneal.png" width="150">
             </div>
         </a>
     </div>
+
+    <div class="card">
+        <a href="Cálculodepredicados.html">
+            <div class="card-body">
+                <h5 class="card-title">Cálculo de predicados <br>  (05-N0083)</h5>
+                <img src="/assets/icons/matematica/Cálculodepredicados.png" alt="Cálculodepredicados.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="CálculoI.html">
+            <div class="card-body">
+                <h5 class="card-title">Cálculo I <br>  (05-N0027)</h5>
+                <img src="/assets/icons/matematica/CálculoI.png" alt="CálculoI.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="CálculoII.html">
+            <div class="card-body">
+                <h5 class="card-title">Cálculo II <br>  (05-N0070)</h5>
+                <img src="/assets/icons/matematica/CálculoII.png" alt="CálculoII.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="EcuacionesDiferenciales.html">
+            <div class="card-body">
+                <h5 class="card-title">Ecuaciones Diferenciales <br>  (05-N0060)</h5>
+                <img src="/assets/icons/matematica/EcuacionesDiferenciales.png" alt="EcuacionesDiferenciales.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="MatemáticaI.html">
+            <div class="card-body">
+                <h5 class="card-title">Matemática I <br>  (05-N0017)</h5>
+                <img src="/assets/icons/matematica/MatemáticaI.png" alt="MatemáticaI.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="MatemáticaIyII.html">
+            <div class="card-body">
+                <h5 class="card-title">Matemática I y II <br>  (05-N0022)</h5>
+                <img src="/assets/icons/matematica/MatemáticaIyII.png" alt="MatemáticaIyII.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="MatemáticaI-vet.html">
+            <div class="card-body">
+                <h5 class="card-title">Matemática I* <br>  (nan)</h5>
+                <img src="/assets/icons/matematica/MatemáticaI.png" alt="MatemáticaI.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="MatemáticaII.html">
+            <div class="card-body">
+                <h5 class="card-title">Matemática II <br>  (05-N0036)</h5>
+                <img src="/assets/icons/matematica/MatemáticaII.png" alt="MatemáticaII.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="MatemáticasDiscretaI.html">
+            <div class="card-body">
+                <h5 class="card-title">Matemáticas Discreta I <br>  (05-N0021)</h5>
+                <img src="/assets/icons/matematica/MatemáticasDiscretaI.png" alt="MatemáticasDiscretaI.png" width="150">
+            </div>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="Métodosnuméricos.html">
+            <div class="card-body">
+                <h5 class="card-title">Métodos numéricos <br>  (05-N0064)</h5>
+                <img src="/assets/icons/matematica/Métodosnuméricos.png" alt="Métodosnuméricos.png" width="150">
+            </div>
+        </a>
+    </div>
+
 </div>
