arregal enlaces de Álgebra Lineal

--- a/pages/matematica/AlgebraLíneal.html
+++ b/pages/matematica/AlgebraLíneal.html
@@ -38,7 +38,7 @@ title: Álgebra Lineal
 
 <p style="margin-top: 20px; font-size: 16px;">
     Si detectas algún error en este material, por favor repórtalo
-    <a href="https://github.com/andres-merino/Curso-Algebra-Lineal/issues">
+    <a href="https://github.com/ECFM-PUCE/AlgebraLineal-05-N0048/issues">
         aquí
     </a>.
 </p>
@@ -55,8 +55,8 @@ title: Álgebra Lineal
 
 <script>
     // Repositorio de GitHub (usuario/nombre-del-repositorio)
-    const repoOwner = "andres-merino";
-    const repoName = "Curso-Algebra-Lineal";
+    const repoOwner = "ECFM-PUCE";
+    const repoName = "AlgebraLineal-05-N0048";
 </script>
 
 {% include recent-commits.html %}
