se arregla la sección docentes

--- a/pages/docentes/0-docentes.html
+++ b/pages/docentes/0-docentes.html
@@ -44,7 +44,6 @@ title: Docentes
             </ul>
         </div>
     </div>
-
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Borrero González Luis José</h5>
@@ -246,11 +245,21 @@ title: Docentes
                 <li>Matemático</li>
                 <li>Mgtr. en Matemáticas Puras y Aplicadas</li>
                 <li>MSc. en Ciencia de Datos</li>
-                <li><a href="https://www.linkedin.com/in/andr%C3%A9s-merino-010a9b12b/" target="_blank">
-                    <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
-                </a><a href="https://orcid.org/0000-0002-5404-918X" target="_blank">
-                    <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
-                </a></li>
+                <li>aemerinot@puce.edu.ec</li>
+                <li>
+                    <a href="https://www.scopus.com/authid/detail.uri?authorId=57211805699" target="_blank">
+                        <img src="/assets/icons/scopus.png" alt="Orcid" width="25">
+                    </a>
+                    <a href="https://orcid.org/0000-0002-5404-918X" target="_blank">
+                        <img src="/assets/icons/orcid.png" alt="Orcid" width="25">
+                    </a>
+                    <a href="https://puceinvestiga.puce.edu.ec/es/persons/andr%C3%A9s-esteban-merino-toapanta" target="_blank">
+                        <img src="/assets/icons/logoPUCE_04.png" alt="Orcid" width="25">
+                    </a>
+                    <a href="https://www.linkedin.com/in/andr%C3%A9s-merino-010a9b12b/" target="_blank">
+                        <img src="/assets/icons/linkedin.png" alt="Linkedin" width="25">
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
@@ -444,6 +453,25 @@ title: Docentes
             </ul>
         </div>
     </div>
+
+
 </div>
 
 
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+    const cards = document.querySelectorAll('.card-doc');
+    
+    cards.forEach(card => {
+        card.addEventListener('click', function() {
+            // Remove 'flipped' class from all cards
+            cards.forEach(c => {
+                if (c !== this) c.classList.remove('flipped');
+            });
+            
+            // Toggle 'flipped' class on the clicked card
+            this.classList.toggle('flipped');
+        });
+    });
+});
+</script>
