arregla enlaces de asistentes

--- a/pages/asistentes/NotebooksR.html
+++ b/pages/asistentes/NotebooksR.html
@@ -6,19 +6,13 @@ title: Notebooks Educativos de R
 <h2>Notebooks Educativos de R</h2>
 
 <div class="container-material">
-    <div class="item">
+    <div class="item-colab" data-link="Intro2R.ipynb">
         <p>Introducción a R: Funcionalidades Básicas y Gráficos</p>
-        <a
-            href="https://colab.research.google.com/github/ECFM-PUCE/R-Notebooks-Educativos/blob/main/Intro2R.ipynb">
             <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab" />
-        </a>
     </div>
-    <div class="item">
+    <div class="item-colab" data-link="FunBasic.ipynb">
         <p>Funciones de estadística nativas y creación de funciones propias</p>
-        <a
-            href="https://colab.research.google.com/github/ECFM-PUCE/R-Notebooks-Educativos/blob/main/FunBasic.ipynb">
             <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab" />
-        </a>
     </div>
 </div>
 
